[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/murder.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/default_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/Victory.gd" type="Script" id=3]
[ext_resource path="res://scenes/Fader.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 350
outline_color = Color( 0.0235294, 0.290196, 0.0823529, 1 )
font_data = ExtResource( 1 )

[node name="Victory" type="Spatial"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/UI/Control/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 288.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.847059, 1, 0.882353, 1 )
text = "VICTORY"
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/UI/Control/VBoxContainer"]
margin_top = 292.0
margin_right = 1024.0
margin_bottom = 343.0
custom_fonts/font = ExtResource( 2 )
text = "You brought light to the world again!"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI/Control/VBoxContainer"]
margin_top = 347.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/Control/VBoxContainer/CenterContainer"]
margin_left = 383.0
margin_top = 37.0
margin_right = 641.0
margin_bottom = 216.0

[node name="RestartButton" type="Button" parent="CanvasLayer/UI/Control/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 258.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 2 )
text = "Restart Game"
__meta__ = {
"_editor_description_": ""
}

[node name="MenuButton" type="Button" parent="CanvasLayer/UI/Control/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 258.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"

[node name="QuitButton" type="Button" parent="CanvasLayer/UI/Control/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 258.0
margin_bottom = 179.0
custom_fonts/font = ExtResource( 2 )
text = "Quit game"

[node name="Fader" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="CanvasLayer/UI/Control/VBoxContainer/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Control/VBoxContainer/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Control/VBoxContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
